# chess-rpg

./: .gitignore  README.md  bootstrap.sh  docker-compose.yml  fix-plugin.patch  scaffold.patch
.github/workflows/: apply-patch.yml  ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/routers/: match.py
backend/app/services/: match_engine.py
backend/tests/: test_health.py
frontend/: Dockerfile  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts
