[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-rpg-backend"
version = "0.1.0"
description = "Backend FastAPI para juego de ajedrez con atributos."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
